--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div class="one-half">
 	<ul>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E02-K-JzaLre58.mp4" controls></video></div>Episode2</a></li>
+<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/Ep2-CW-hd3f_am.mp4" controls></video></div>Episode2</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E04-djoiEzp52Q.mp4" controls></video></div>Episode4</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E06-oZrnA4Usdd.mp4" controls></video></div>Episode6</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/E08-y6sJX87p2G.mp4" controls></video></div>Episode8</a></li>
