--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/Ep7-VCn1ollyeU.mp4" controls></video></div>Episode7</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/Ep9-w4qcsgKdfQ.mp4" controls></video></div>Episode9</a></li>
 <a ><div class="wrapper"><video src ="https://cdn.kapwing.com/Ep11-T8dMKYqYxk.mp4" controls></video></div>Episode11</a></li>
-<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/final_619b757b532d" controls></video></div>Episode13</a></li>
+<a ><div class="wrapper"><video src ="https://cdn.kapwing.com/Ep13-whaP8R01OJ.mp4" controls></video></div>Episode13</a></li>
 	</ul>
 	</div>
 	<div class="one-half">
